--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="ja">
+    <head>
+        <meta charset="UTF-8">
+        <title>Hamburger</title>
+        <meta name="description" content="ハンバーガーサイト（ダミーサイト）">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://unpkg.com/modern-css-reset/dist/reset.min.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="http://mplus-fonts.sourceforge.jp/webfonts/basic_latin/mplus_webfonts.css">
+        <link rel="stylesheet" type="text/css" href="http://mplus-fonts.sourceforge.jp/webfonts/general-j/mplus_webfonts.css">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 
+    <body>
+        <div class="c-grid">
+            <header class="l-header c-grid__item1">
+                header
+            </header>
+
+            <article class="l-contents c-grid__item2">
+                contents
+            </article>
+
+            <aside class="l-sidebar c-grid__item3">
+                sidebar
+            </aside>
+
+            <footer class="l-footer c-grid__item4">
+                footer
+            </footer>
+        </div>
+    </body>
+</html>
