--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <div class="c-grid">
             <header class="l-header c-grid__item1">
-                header test2
+                header
             </header>
 
             <article class="l-contents c-grid__item2">
