--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
         <!-- スタイルシート -->
         <link rel="stylesheet" href="css/style.css">
         <!-- favicon -->
-        <link rel="icon" href="img/favicon.ico">
+        <!-- <link rel="icon" href="img/favicon.ico"> -->
+        <link rel="icon" href="img/favicon2.ico">
     </head>
 
     <body>
         <div class="c-grid">
             <!-- header -->
             <header class="l-header p-header c-grid__item1">
-                <h1 class="p-header__logo c-logo">Hamburger</h1>
+                <h1 class="p-header__logo c-text__ttl--e">Hamburger</h1>
                 <form action="" class="p-search-form" name="search">
                     <label for="search" class="p-search-form__screen-text"></label>
                     <input type="search" placeholder="検索..." class="p-search-form__keyword">
@@ -35,74 +36,112 @@
             <article class="l-contents p-contents c-grid__item2">
                 <!-- mainvisual -->
                 <div class="p-mainvisual p-mainvisual__bg c-bg">
-                    <h2 class="p-mainvisual__title c-title">ダミーサイト</h2>
+                    <h2 class="p-mainvisual__title c-text__ttl--ja">ダミーサイト</h2>
                 </div><!-- ここまでmainvisual -->
 
                 <!-- food-menu -->
                 <div class="p-food-menu">
                     <ul class="p-food-menu__ul">
                         <li class="p-food-menu__li">
-                            <h2 class="p-food-menu__title c-title">Take Out</h2>
+                            <h2 class="p-food-menu__title c-text__ttl--e">Take Out</h2>
                             <p class="p-food-menu__line c-line"></p>
                             <dl class="p-food-menu__dl">
-                                <dt class="p-food-menu__dt">Take OUT</dt>
-                                <dd class="p-food-menu__dd">当店のテイクアウトで利用できる商品を掲載しています</dd>
-                                <dt class="p-food-menu__dt">Take OUT</dt>
-                                <dd class="p-food-menu__dd">当店のテイクアウトで利用できる商品を掲載しています</dd>
+                                <dt class="p-food-menu__dt c-text--e">Take OUT</dt>
+                                <dd class="p-food-menu__dd c-text--ja">
+                                    当店のテイクアウトで利用できる商品を掲載しています。
+                                    当店のテイクアウトで利用できる商品を掲載しています。
+                                    当店のテイクアウトで利用できる商品を掲載しています。
+                                </dd>
+                            </dl>
+                            <dl class="p-food-menu__dl">
+                                <dt class="p-food-menu__dt c-text--e">Take OUT</dt>
+                                <dd class="p-food-menu__dd c-text--ja">
+                                    当店のテイクアウトで利用できる商品を掲載しています。
+                                    当店のテイクアウトで利用できる商品を掲載しています。
+                                    当店のテイクアウトで利用できる商品を掲載しています。
+                                </dd>
                             </dl>
                         </li>
                         <li class="p-food-menu__li">
-                            <h2 class="p-food-menu__title c-title">Eat In</h2>
-                            <p class="c-line"></p>
+                            <h2 class="p-food-menu__title c-text__ttl--e">Eat In</h2>
+                            <p class="p-food-menu__line c-line"></p>
                             <dl class="p-food-menu__dl">
-                                <dt class="p-food-menu__dt">Take OUT</dt>
-                                <dd class="p-food-menu__dd">当店のテイクアウトで利用できる商品を掲載しています</dd>
-                                <dt class="p-food-menu__dt">Take OUT</dt>
-                                <dd class="p-food-menu__dd">当店のテイクアウトで利用できる商品を掲載しています</dd>
+                                <dt class="p-food-menu__dt c-text--e">Take OUT</dt>
+                                <dd class="p-food-menu__dd c-text--ja">
+                                    当店のテイクアウトで利用できる商品を掲載しています。
+                                    当店のテイクアウトで利用できる商品を掲載しています。
+                                    当店のテイクアウトで利用できる商品を掲載しています。
+                                </dd>
+                            </dl>
+                            <dl class="p-food-menu__dl">
+                                <dt class="p-food-menu__dt c-text--e">Take OUT</dt>
+                                <dd class="p-food-menu__dd c-text--ja">
+                                    当店のテイクアウトで利用できる商品を掲載しています。
+                                    当店のテイクアウトで利用できる商品を掲載しています。
+                                    当店のテイクアウトで利用できる商品を掲載しています。
+                                </dd>
                             </dl>
                         </li>
                     </ul>
                 </div><!-- ここまでfood-menu -->
 
                 <!-- access -->
-                <section class="p-access">
-                    <div class="p-access__box">
-                        <h2 class="p-access__title c-title">見出しが入ります</h2>
-                        <p class="p-access__line c-line"></p>
-                        <p class="p-access__text c-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                <section class="p-access">  <!-- 背景：map -->
+                    <div class="p-access__map-layer">  <!-- 背景：透過の黒 -->
+                        <div class="p-access__bg-layer">  <!-- 背景：透過の黒 -->
+                            <div class="p-access__wrapper">
+                                <h2 class="p-access__title c-text__ttl--ja">見出しが入ります</h2>
+                                <p class="p-access__line c-line"></p>
+                                <p class="p-access__text c-text--ja">
+                                    テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
+                                    テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
+                                    テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
+                                    テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
+                                    テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
+                                    テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
+                                    テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
+                                    テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
+                                    テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
+                                    テキストが入ります。テキストが入ります。テキストが入ります。
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </section><!-- ここまでaccess -->
             </article><!-- ここまでcontents -->
 
             <!-- sidebar -->
             <aside class="l-sidebar p-sidebar c-grid__item3">
-                <h2 class="p-sidebar__logo c-title">Menu</h2>
+                <h2 class="p-sidebar__logo c-text__ttl--e">Menu</h2>
                 <ul class="p-sidebar__ul">
-                    <li class="p-sidebar__li">バーガー</li>
+                    <li class="p-sidebar__li c-text__ttl--ja">バーガー</li>
                         <ul class="p-sidebar__sub-ul">
-                            <li class="p-sidebar__sub-li">ハンバーガー</li>
-                            <li class="p-sidebar__sub-li">チーズバーガー</li>
-                            <li class="p-sidebar__sub-li">テリヤキバーガー</li>
-                            <li class="p-sidebar__sub-li">アボカドバーガー</li>
-                            <li class="p-sidebar__sub-li">フィッシュバーガー</li>
-                            <li class="p-sidebar__sub-li">ベーコンバーガー</li>
-                            <li class="p-sidebar__sub-li">チキンバーガー</li>
+                            <li class="p-sidebar__sub-li c-text--ja">ハンバーガー</li>
+                            <li class="p-sidebar__sub-li c-text--ja">チーズバーガー</li>
+                            <li class="p-sidebar__sub-li c-text--ja">テリヤキバーガー</li>
+                            <li class="p-sidebar__sub-li c-text--ja">アボカドバーガー</li>
+                            <li class="p-sidebar__sub-li c-text--ja">フィッシュバーガー</li>
+                            <li class="p-sidebar__sub-li c-text--ja">ベーコンバーガー</li>
+                            <li class="p-sidebar__sub-li c-text--ja">チキンバーガー</li>
                         </ul>
-                    <li class="p-sidebar__li">サイド</li>
+                    <li class="p-sidebar__li c-text__ttl--ja">サイド</li>
                         <ul class="p-sidebar__sub-ul">
-                            <li class="p-sidebar__sub-li">ポテト</li>
-                            <li class="p-sidebar__sub-li">サラダ</li>
-                            <li class="p-sidebar__sub-li">ナゲット</li>
-                            <li class="p-sidebar__sub-li">コーン</li>
+                            <li class="p-sidebar__sub-li c-text--ja">ポテト</li>
+                            <li class="p-sidebar__sub-li c-text--ja">サラダ</li>
+                            <li class="p-sidebar__sub-li c-text--ja">ナゲット</li>
+                            <li class="p-sidebar__sub-li c-text--ja">コーン</li>
                         </ul>
-                    <li class="p-sidebar__li">ドリンク</li>
+                    <li class="p-sidebar__li c-text__ttl--ja">ドリンク</li>
                         <ul class="p-sidebar__sub-ul">
-                            <li class="p-sidebar__sub-li">コーラ</li>
-                            <li class="p-sidebar__sub-li">ファンタ</li>
-                            <li class="p-sidebar__sub-li">オレンジ</li>
-                            <li class="p-sidebar__sub-li">アップル</li>
-                            <li class="p-sidebar__sub-li">紅茶（Ice/Hot）</li>
-                            <li class="p-sidebar__sub-li">コーヒー（Ice/Hot）</li>
+                            <li class="p-sidebar__sub-li c-text--ja">コーラ</li>
+                            <li class="p-sidebar__sub-li c-text--ja">ファンタ</li>
+                            <li class="p-sidebar__sub-li c-text--ja">オレンジ</li>
+                            <li class="p-sidebar__sub-li c-text--ja">アップル</li>
+                            <li class="p-sidebar__sub-li c-text--ja">紅茶（Ice/Hot）</li>
+                            <li class="p-sidebar__sub-li c-text--ja">コーヒー（Ice/Hot）</li>
+                            <li class="p-sidebar__sub-li c-text--ja">獺祭</li>
+                            <li class="p-sidebar__sub-li c-text--ja">十四代</li>
+                            <li class="p-sidebar__sub-li c-text--ja">酒有夢</li>
                         </ul>
                 </ul>
             </aside><!-- ここまでsidebar -->
@@ -111,10 +150,10 @@
             <footer class="l-footer p-footer c-grid__item4">
                 <div class="p-footer__wrapper">
                     <ul class="p-footer__menu">
-                        <li class="p-footer__menu-li">ショップ情報</li>
-                        <li class="p-footer__menu-li">ヒストリー</li>
+                        <li class="p-footer__menu-li c-text--ja">ショップ情報</li>
+                        <li class="p-footer__menu-li c-text--ja">ヒストリー</li>
                     </ul>
-                    <small class="p-footer__copyright">Copyright: RaiseTech</small>
+                    <small class="p-footer__copyright c-text--ja">Copyright: RaiseTech</small>
                 </div>
             </footer><!-- ここまでfooter -->
         </div>
