--- a/index.html
+++ b/index.html
@@ -21,19 +21,18 @@
     </head>
 
     <body>
-        <div class="c-grid">
+        <div class="l-grid">
             <!-- header -->
-            <header class="l-header p-header c-grid__item1">
+            <header class="l-grid__item1 p-header">
                 <h1 class="p-header__logo c-text__ttl--e">Hamburger</h1>
                 <form action="" class="p-search-form" name="search">
-                    <label for="search" class="p-search-form__screen-text"></label>
-                    <input type="search" placeholder="検索..." class="p-search-form__keyword">
-                    <input  type="submit" value="検索" class="p-search-form__submit">
+                    <input type="search" placeholder="検索..." class="p-search-form__input c-form__input">
+                    <input  type="submit" value="検索" class="p-search-form__button c-form__button">
                 </form>
             </header><!-- ここまでheader -->
 
             <!-- contents -->
-            <article class="l-contents p-contents c-grid__item2">
+            <article class="l-grid__item2 p-contents">
                 <!-- mainvisual -->
                 <div class="p-mainvisual p-mainvisual__bg c-bg">
                     <h2 class="p-mainvisual__title c-text__ttl--ja">ダミーサイト</h2>
@@ -42,51 +41,59 @@
                 <!-- food-menu -->
                 <div class="p-food-menu">
                     <ul class="p-food-menu__ul">
-                        <li class="p-food-menu__li">
-                            <h2 class="p-food-menu__title c-text__ttl--e">Take Out</h2>
-                            <p class="p-food-menu__line c-line"></p>
-                            <dl class="p-food-menu__dl">
-                                <dt class="p-food-menu__dt c-text--e">Take OUT</dt>
-                                <dd class="p-food-menu__dd c-text--ja">
-                                    当店のテイクアウトで利用できる商品を掲載しています。
-                                    当店のテイクアウトで利用できる商品を掲載しています。
-                                    当店のテイクアウトで利用できる商品を掲載しています。
-                                </dd>
-                            </dl>
-                            <dl class="p-food-menu__dl">
-                                <dt class="p-food-menu__dt c-text--e">Take OUT</dt>
-                                <dd class="p-food-menu__dd c-text--ja">
-                                    当店のテイクアウトで利用できる商品を掲載しています。
-                                    当店のテイクアウトで利用できる商品を掲載しています。
-                                    当店のテイクアウトで利用できる商品を掲載しています。
-                                </dd>
-                            </dl>
+                        <li class="p-food-menu__li c-bg">
+                            <div class="p-food-menu__head">
+                                <h2 class="p-food-menu__title c-text__ttl--e">Take Out</h2>
+                                <p class="p-food-menu__line c-line"></p>
+                            </div>
+                            <div class="p-food-menu__bottom">
+                                <dl class="p-food-menu__dl">
+                                    <dt class="p-food-menu__dt c-text--e">Take OUT</dt>
+                                    <dd class="p-food-menu__dd c-text--ja">
+                                        当店のテイクアウトで利用できる商品を掲載しています。
+                                        当店のテイクアウトで利用できる商品を掲載しています。
+                                        当店のテイクアウトで利用できる商品を掲載しています。
+                                    </dd>
+                                </dl>
+                                <dl class="p-food-menu__dl">
+                                    <dt class="p-food-menu__dt c-text--e">Take OUT</dt>
+                                    <dd class="p-food-menu__dd c-text--ja">
+                                        当店のテイクアウトで利用できる商品を掲載しています。
+                                        当店のテイクアウトで利用できる商品を掲載しています。
+                                        当店のテイクアウトで利用できる商品を掲載しています。
+                                    </dd>
+                                </dl>
+                            </div>
                         </li>
-                        <li class="p-food-menu__li">
-                            <h2 class="p-food-menu__title c-text__ttl--e">Eat In</h2>
-                            <p class="p-food-menu__line c-line"></p>
-                            <dl class="p-food-menu__dl">
-                                <dt class="p-food-menu__dt c-text--e">Take OUT</dt>
-                                <dd class="p-food-menu__dd c-text--ja">
-                                    当店のテイクアウトで利用できる商品を掲載しています。
-                                    当店のテイクアウトで利用できる商品を掲載しています。
-                                    当店のテイクアウトで利用できる商品を掲載しています。
-                                </dd>
-                            </dl>
-                            <dl class="p-food-menu__dl">
-                                <dt class="p-food-menu__dt c-text--e">Take OUT</dt>
-                                <dd class="p-food-menu__dd c-text--ja">
-                                    当店のテイクアウトで利用できる商品を掲載しています。
-                                    当店のテイクアウトで利用できる商品を掲載しています。
-                                    当店のテイクアウトで利用できる商品を掲載しています。
-                                </dd>
-                            </dl>
+                        <li class="p-food-menu__li c-bg">
+                            <div class="p-food-menu__head">
+                                <h2 class="p-food-menu__title c-text__ttl--e">Eat In</h2>
+                                <p class="p-food-menu__line c-line"></p>
+                            </div>
+                            <div class="p-food-menu__bottom">
+                                <dl class="p-food-menu__dl">
+                                    <dt class="p-food-menu__dt c-text--e">Take OUT</dt>
+                                    <dd class="p-food-menu__dd c-text--ja">
+                                        当店のテイクアウトで利用できる商品を掲載しています。
+                                        当店のテイクアウトで利用できる商品を掲載しています。
+                                        当店のテイクアウトで利用できる商品を掲載しています。
+                                    </dd>
+                                </dl>
+                                <dl class="p-food-menu__dl">
+                                    <dt class="p-food-menu__dt c-text--e">Take OUT</dt>
+                                    <dd class="p-food-menu__dd c-text--ja">
+                                        当店のテイクアウトで利用できる商品を掲載しています。
+                                        当店のテイクアウトで利用できる商品を掲載しています。
+                                        当店のテイクアウトで利用できる商品を掲載しています。
+                                    </dd>
+                                </dl>
+                            </div>
                         </li>
                     </ul>
                 </div><!-- ここまでfood-menu -->
 
                 <!-- access -->
-                <section class="p-access">  <!-- 背景：map -->
+                <section class="p-access c-bg">  <!-- 背景：map画像 -->
                     <div class="p-access__map-layer">  <!-- 背景：透過の黒 -->
                         <div class="p-access__bg-layer">  <!-- 背景：透過の黒 -->
                             <div class="p-access__wrapper">
@@ -111,7 +118,7 @@
             </article><!-- ここまでcontents -->
 
             <!-- sidebar -->
-            <aside class="l-sidebar p-sidebar c-grid__item3">
+            <aside class="l-grid__item3 p-sidebar">
                 <h2 class="p-sidebar__logo c-text__ttl--e">Menu</h2>
                 <ul class="p-sidebar__ul">
                     <li class="p-sidebar__li c-text__ttl--ja">バーガー</li>
@@ -142,12 +149,13 @@
                             <li class="p-sidebar__sub-li c-text--ja">獺祭</li>
                             <li class="p-sidebar__sub-li c-text--ja">十四代</li>
                             <li class="p-sidebar__sub-li c-text--ja">酒有夢</li>
+                            <li class="p-sidebar__sub-li c-text--ja">No.6</li>
                         </ul>
                 </ul>
             </aside><!-- ここまでsidebar -->
 
             <!-- footer -->
-            <footer class="l-footer p-footer c-grid__item4">
+            <footer class="l-grid__item4 p-footer">
                 <div class="p-footer__wrapper">
                     <ul class="p-footer__menu">
                         <li class="p-footer__menu-li c-text--ja">ショップ情報</li>
