サイズ調整

--- a/index.html
+++ b/index.html
@@ -121,35 +121,35 @@
             <aside class="l-grid__item3 p-sidebar">
                 <h2 class="p-sidebar__logo c-text__ttl--e">Menu</h2>
                 <ul class="p-sidebar__ul">
-                    <li class="p-sidebar__li c-text__ttl--ja">バーガー</li>
+                    <li class="p-sidebar__li c-text__ttl--ja"><a href="#">バーガー</a></li>
                         <ul class="p-sidebar__sub-ul">
-                            <li class="p-sidebar__sub-li c-text--ja">ハンバーガー</li>
-                            <li class="p-sidebar__sub-li c-text--ja">チーズバーガー</li>
-                            <li class="p-sidebar__sub-li c-text--ja">テリヤキバーガー</li>
-                            <li class="p-sidebar__sub-li c-text--ja">アボカドバーガー</li>
-                            <li class="p-sidebar__sub-li c-text--ja">フィッシュバーガー</li>
-                            <li class="p-sidebar__sub-li c-text--ja">ベーコンバーガー</li>
-                            <li class="p-sidebar__sub-li c-text--ja">チキンバーガー</li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">ハンバーガー</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">チーズバーガー</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">テリヤキバーガー</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">アボカドバーガー</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">フィッシュバーガー</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">ベーコンバーガー</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">チキンバーガー</a></li>
                         </ul>
-                    <li class="p-sidebar__li c-text__ttl--ja">サイド</li>
+                    <li class="p-sidebar__li c-text__ttl--ja"><a href="#">サイド</a></li>
                         <ul class="p-sidebar__sub-ul">
-                            <li class="p-sidebar__sub-li c-text--ja">ポテト</li>
-                            <li class="p-sidebar__sub-li c-text--ja">サラダ</li>
-                            <li class="p-sidebar__sub-li c-text--ja">ナゲット</li>
-                            <li class="p-sidebar__sub-li c-text--ja">コーン</li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">ポテト</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">サラダ</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">ナゲット</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">コーン</a></li>
                         </ul>
-                    <li class="p-sidebar__li c-text__ttl--ja">ドリンク</li>
+                    <li class="p-sidebar__li c-text__ttl--ja"><a href="#">ドリンク</a></li>
                         <ul class="p-sidebar__sub-ul">
-                            <li class="p-sidebar__sub-li c-text--ja">コーラ</li>
-                            <li class="p-sidebar__sub-li c-text--ja">ファンタ</li>
-                            <li class="p-sidebar__sub-li c-text--ja">オレンジ</li>
-                            <li class="p-sidebar__sub-li c-text--ja">アップル</li>
-                            <li class="p-sidebar__sub-li c-text--ja">紅茶（Ice/Hot）</li>
-                            <li class="p-sidebar__sub-li c-text--ja">コーヒー（Ice/Hot）</li>
-                            <li class="p-sidebar__sub-li c-text--ja">獺祭</li>
-                            <li class="p-sidebar__sub-li c-text--ja">十四代</li>
-                            <li class="p-sidebar__sub-li c-text--ja">酒有夢</li>
-                            <li class="p-sidebar__sub-li c-text--ja">No.6</li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">コーラ</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">ファンタ</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">オレンジ</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">アップル</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">紅茶（Ice/Hot）</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">コーヒー（Ice/Hot）</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">獺祭</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">十四代</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">酒有夢</a></li>
+                            <li class="p-sidebar__sub-li c-text--ja"><a href="#">No.6</a></li>
                         </ul>
                 </ul>
             </aside><!-- ここまでsidebar -->
