--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <!-- スタイルシート -->
         <link rel="stylesheet" href="css/style.css">
         <!-- favicon -->
-        <!-- <link rel="icon" href="img/favicon.ico"> -->
-        <link rel="icon" href="img/favicon2.ico">
+        <link rel="icon" href="img/favicon.ico">
+        <!-- <link rel="icon" href="img/favicon2.ico"> -->
     </head>
 
     <body>
