レスポンシブ余白修正

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                 <!-- access -->
                 <section class="p-access c-bg">  <!-- 背景：map画像 -->
-                    <div class="p-access__map-layer">  <!-- 背景：透過の黒 -->
+                    <div class="p-access__map-layer">  <!-- 背景：mapを覆う透過の黒 -->
                         <div class="p-access__bg-layer">  <!-- 背景：透過の黒 -->
                             <div class="p-access__wrapper">
                                 <h2 class="p-access__title c-text__ttl--ja">見出しが入ります</h2>
@@ -113,6 +113,7 @@
                                 </p>
                             </div>
                         </div>
+                        <div class="p-access__bg-layer2"></div>  <!-- spサイズの背景：透過の黒 -->
                     </div>
                 </section><!-- ここまでaccess -->
             </article><!-- ここまでcontents -->
