ハンバーガーメニュー

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
             <header class="l-grid__item1 p-header">
                 <h1 class="p-header__logo c-text__ttl--e">Hamburger</h1>
                 <form action="" class="p-search-form" name="search">
-                    <input type="search" placeholder="検索..." class="p-search-form__input c-form__input">
+                    <input type="search" placeholder="" class="p-search-form__input c-form__input">
                     <input  type="submit" value="検索" class="p-search-form__button c-form__button">
                 </form>
+                <h2 class="p-header__button c-text__ttl--e">Menu</h2>
             </header><!-- ここまでheader -->
 
             <!-- contents -->
@@ -72,7 +73,7 @@
                             </div>
                             <div class="p-food-menu__bottom">
                                 <dl class="p-food-menu__dl">
-                                    <dt class="p-food-menu__dt c-text--e">Take OUT</dt>
+                                    <dt class="p-food-menu__dt c-text--e">Eat In</dt>
                                     <dd class="p-food-menu__dd c-text--ja">
                                         当店のテイクアウトで利用できる商品を掲載しています。
                                         当店のテイクアウトで利用できる商品を掲載しています。
@@ -80,7 +81,7 @@
                                     </dd>
                                 </dl>
                                 <dl class="p-food-menu__dl">
-                                    <dt class="p-food-menu__dt c-text--e">Take OUT</dt>
+                                    <dt class="p-food-menu__dt c-text--e">Eat In</dt>
                                     <dd class="p-food-menu__dd c-text--ja">
                                         当店のテイクアウトで利用できる商品を掲載しています。
                                         当店のテイクアウトで利用できる商品を掲載しています。
@@ -165,6 +166,12 @@
                     <small class="p-footer__copyright c-text--ja">Copyright: RaiseTech</small>
                 </div>
             </footer><!-- ここまでfooter -->
+            
+            <!-- サイドバーの黒い透過 -->
+            <div class="c-overlay"></div>
         </div>
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
